--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 24 19:52:10 IST 2018
-sdk.dir=/Users/D/Library/Android/sdk
+#Mon Nov 26 14:32:11 IST 2018
+ndk.dir=C\:\\Users\\Rishabh Awasthi\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\Rishabh Awasthi\\AppData\\Local\\Android\\Sdk
