--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,5 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
     implementation 'com.android.volley:volley:1.1.0'
-
+    implementation 'com.itextpdf:itextg:5.5.10'
 }
