--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,19 +34,19 @@ dependencies {
     implementation "com.android.support:support-media-compat:$support_version"
     implementation "com.android.support:support-v4:$support_version"
     implementation "com.android.support:design:$support_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.android.support.constraint:constraint-layout:1.1.3"
     // Google Drive
     implementation "com.google.android.gms:play-services-auth:$play_services_version"
     implementation "com.google.android.gms:play-services-drive:$play_services_drive"
-    implementation 'com.squareup.okio:okio:1.14.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'org.apache.poi:poi:3.9'
-    implementation 'org.apache.poi:poi-ooxml:3.9'
+    implementation "com.squareup.okio:okio:1.14.0"
+    testImplementation "junit:junit:4.12"
+    androidTestImplementation "com.android.support.test:runner:1.0.2"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
+    implementation "org.apache.poi:poi:3.9"
+    implementation "org.apache.poi:poi-ooxml:3.9"
 
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
-    implementation 'com.android.volley:volley:1.1.0'
-    implementation 'com.itextpdf:itextg:5.5.10'
+    implementation "com.android.volley:volley:1.1.0"
+    implementation "com.itextpdf:itextg:5.5.10"
 }
