--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Built application files
-/*/build/
+app/build/
+build/
+gradle/
 
 # Crashlytics configuations
 com_crashlytics_export_strings.xml
@@ -12,6 +14,11 @@ local.properties
 
 # Signing files
 .signing/
+
+# In Src
+/app/build.gradle
+/app/*.json
+
 
 # User-specific configurations
 .idea/libraries/
@@ -38,6 +45,7 @@ Thumbs.db
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
+*.json
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
