--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'io.fabric'
 
 ext {
     play_services_version = "16.0.1"
@@ -70,6 +71,11 @@ dependencies {
     implementation('com.google.apis:google-api-services-drive:v3-rev136-1.25.0') {
         exclude group: 'org.apache.httpcomponents'
     }
+    // Check for v11.4.2 or higher
+    //implementation 'com.google.firebase:firebase-core:16.0.6'
+
+    // Add dependency
+  //  implementation 'com.crashlytics.sdk.android:crashlytics:2.9.7'
 
 
 }
