--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'io.fabric'
+apply plugin: 'com.google.gms.google-services'
 
 ext {
     play_services_version = "16.0.1"
@@ -72,10 +73,10 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
     }
     // Check for v11.4.2 or higher
-    //implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
 
     // Add dependency
-  //  implementation 'com.crashlytics.sdk.android:crashlytics:2.9.7'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.7'
 
 
 }
