--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,23 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
+
     }
     dependencies {
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // Check for v3.1.2 or higher
+        classpath 'com.google.gms:google-services:4.2.0'
+
+        // Add dependency
+        classpath 'io.fabric.tools:gradle:1.26.1'
     }
 }
 
@@ -19,6 +29,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+        }
+
     }
 }
 
