--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
+
+    implementation "com.android.support:support-compat:$support_version"
+
     implementation "com.android.support:support-media-compat:$support_version"
     implementation "com.android.support:support-v4:$support_version"
     implementation "com.android.support:design:$support_version"
@@ -81,5 +84,6 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.7'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     kapt 'android.arch.persistence.room:compiler:1.1.1'
+    implementation 'com.android.support:support-compat:28.0.0'
 
 }
