--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.10'
+    ext.kotlin_version = '1.3.11'
     repositories {
         google()
+        mavenCentral()
         jcenter()
         maven {
             url 'https://maven.fabric.io/public'
@@ -29,10 +30,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-        }
-
+        mavenCentral()
+        maven { url 'https://maven.google.com/' }
+//        maven { url 'https://maven.fabric.io/public' }
     }
 }
 
